# docs/swagger.yaml
@@ -14,6 +14,22 @@ definitions:
       status:
         type: integer
     type: object
+  models.User:
+    properties:
+      Useremail:
+        type: string
+      Username:
+        type: string
+      Userpassword:
+        type: string
+    type: object
+  models.Userlogin:
+    properties:
+      Username:
+        type: string
+      Userpassword:
+        type: string
+    type: object
 host: localhost:1323
 info:
   contact: {}
@@ -293,6 +309,124 @@ paths:
       summary: Retrives all recored on specific operation
       tags:
       - calculator
+  /textfileprocessor:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Get the text filr from the user and count the filestats like lines,spaces,words,vowels,punctuation
+        & timestamps
+      parameters:
+      - description: Number of goroutines
+        in: formData
+        name: goroutines
+        required: true
+        type: string
+      - description: Text file to process
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: File result Successfully Added
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Count the textfile stats
+      tags:
+      - Textfile
+  /textfilestats/all:
+    get:
+      description: Get all the stats of a file stored in database like timestamp,lines,words,spaces,vowels
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully Retrieved all data
+          schema:
+            items:
+              $ref: '#/definitions/models.Resp'
+            type: array
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get all stats of a processed file
+      tags:
+      - Textfile
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: Signup the user and stores the stats of a user in a database
+      parameters:
+      - description: username,userpassword & useremail cannot be empty
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User verified successfully
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "400":
+          description: User already exists
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "500":
+          description: Invalid input
+          schema:
+            type: string
+      summary: User Signup
+      tags:
+      - user
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user and generates the Authorixation token
+      parameters:
+      - description: username & userpassword cannot be empty
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.Userlogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: completed
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "400":
+          description: ' "User does not exists'
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "500":
+          description: Invalid input
+          schema:
+            type: string
+      summary: User Login
+      tags:
+      - user
 securityDefinitions:
   BearerAuth:
     description: Enter your bearer token in the format **Bearer &lt;token&gt;**
